<resources>
    <string name="app_name">BudgetTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_login">Login</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="action_profile">Profile</string>
    <string name="action_planer">Planer</string>
    <string name="action_presets">Presets</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="action_reset">Reset</string>
    <string name="action_settings_title">Settings</string>
    <string name="action_about_title">About</string>
    <string name="action_logout_title">Logout</string>
    <string name="action_reset_title">Reset</string>
    <string name="action_forgot_password_title">Forgot Password</string>
    <string name="action_profile_title">Profile</string>
    <string name="action_planer_title">Planer</string>
    <string name="action_presets_title">Presets</string>
    <string name="action_settings_desc">Settings description</string>
    <string name="action_about_desc">About description</string>
    <string name="action_logout_desc">Logout description</string>
    <string name="action_reset_desc">Reset description</string>
    <string name="action_forgot_password_desc">Forgot Password description</string>
    <string name="action_profile_desc">Profile description</string>
    <string name="action_planer_desc">Planer description</string>
    <string name="action_presets_desc">Presets description</string>
    <string name="action_settings_subtitle">Settings subtitle</string>
    <string name="action_about_subtitle">About subtitle</string>
    <string name="action_logout_subtitle">Logout subtitle</string>
    <string name="action_reset_subtitle">Reset subtitle</string>
    <string name="action_forgot_password_subtitle">Forgot Password subtitle</string>
    <string name="action_profile_subtitle">Profile subtitle</string>
    <string name="action_planer_subtitle">Planer subtitle</string>
    <string name="action_presets_subtitle">Presets subtitle</string>


    <string name="menu_profile">Profile</string>
    <string name="menu_planer">Planer</string>
    <string name="menu_presets">Presets</string>
    <string name="menu_login">Login</string>
    <string name="menu_registration">Sign Up</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_forgot_password">Forgot Password</string>
    <string name="menu_profile_title">Profile</string>
    <string name="menu_planer_title">Planer</string>
    <string name="menu_presets_title">Presets</string>
    <string name="menu_login_title">Login</string>
    <string name="menu_signUp_title">Sign Up</string>
    <string name="menu_settings_title">Settings</string>
    <string name="menu_about_title">About</string>
    <string name="menu_logout_title">Logout</string>
    <string name="menu_reset_title">Reset</string>
    <string name="menu_forgot_password_title">Forgot Password</string>
    <string name="menu_profile_desc">Profile description</string>
    <string name="menu_planer_desc">Planer description</string>
    <string name="menu_presets_desc">Presets description</string>
    <string name="menu_login_desc">Login description</string>
    <string name="menu_signUp_desc">Sign Up description</string>
    <string name="menu_settings_desc">Settings description</string>
    <string name="menu_about_desc">About description</string>
    <string name="menu_logout_desc">Logout description</string>
    <string name="menu_reset_desc">Reset description</string>
    <string name="menu_forgot_password_desc">Forgot Password description</string>
    <string name="menu_profile_subtitle">Profile subtitle</string>
    <string name="menu_planer_subtitle">Planer subtitle</string>
    <string name="menu_presets_subtitle">Presets subtitle</string>
    <string name="menu_login_subtitle">Login subtitle</string>
    <string name="menu_signUp_subtitle">Sign Up subtitle</string>
    <string name="menu_settings_subtitle">Settings subtitle</string>
    <string name="menu_about_subtitle">About subtitle</string>
    <string name="menu_logout_subtitle">Logout subtitle</string>
    <string name="menu_reset_subtitle">Reset subtitle</string>
    <string name="menu_forgot_password_subtitle">Forgot Password subtitle</string>

</resources>