<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_profile"
        android:name="de.hawhamburg.budgettracker.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_planer"
        android:name="de.hawhamburg.budgettracker.ui.planer.PlanerFragment"
        android:label="@string/menu_planer"
        tools:layout="@layout/fragment_planer" />

    <fragment
        android:id="@+id/nav_presets"
        android:name="de.hawhamburg.budgettracker.ui.presets.PresetsFragment"
        android:label="@string/menu_presets"
        tools:layout="@layout/fragment_presets" />

    <fragment
        android:id="@+id/nav_login"
        android:name="de.hawhamburg.budgettracker.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/activity_login" >
        <action
            android:id="@+id/action_nav_login_to_nav_signUp"
            app:destination="@id/nav_registration" />
    </fragment>

    <fragment
        android:id="@+id/nav_registration"
        android:name="de.hawhamburg.budgettracker.ui.registration.RegistrationFragment"
        android:label="@string/menu_registration"
        tools:layout="@layout/activity_registration" />
</navigation>